[project]
name = "mining-arc"
version = "0.1.0"
description = "Hive Token Distribution Script"
readme = "README.md"
authors = [
    { name = "Michael Garcia", email = "thecrazygm@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "beem>=0.24.26",
    "hiveengine>=0.2.2",
    "python-dotenv>=1.0.1",
    "rich>=13.0.0",
]

[project.scripts]
mining-arc = "mining_arc:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
