[project]
name = "mining-arc"
version = "0.1.0"
description = "Hive Token Distribution Script"
readme = "README.md"
authors = [
    { name = "Michael Garcia", email = "thecrazygm@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "hive-nectar",
    "nectarengine",
    "python-dotenv",
    "rich",
]

[project.scripts]
mining-arc = "mining_arc:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
